@@ -1,3 +1,4 @@
+ - Add output of cG(q) and dG(q) weights in matrix format
  - Fix numbering of frames from plotslab script
  - Add png output for plotslab script
  - Add script for running stiff test problems, plot solutions
